Úprava HTML kódu

--- a/index.html
+++ b/index.html
@@ -7,29 +7,22 @@
 		<link rel="shortcut icon" href="favicon.png" />
 		<link
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-			rel="stylesheet"
-		/>
+			rel="stylesheet"/>
 		<link
 			href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
-			rel="stylesheet"
-		/>
+			rel="stylesheet"/>
 		<link
 			href="mdb5-standard-UI-kit-free-6.0.1/css/mdb.min.css"
-			rel="stylesheet"
-		/>
+			rel="stylesheet"/>
 		<script src="mdb5-standard-UI-kit-free-6.0.1/js/mdb.min.js" defer></script>
 		<link rel="stylesheet" href="styly.css" />
 	</head>
+
 	<body class="landing-page">
 		<!-- Navigace -->
 		<nav class="navbar navbar-expand-lg navbar-light bg-white">
 			<div class="container-fluid">
-				<button
-					class="navbar-toggler"
-					type="button"
-					id="menu-tlacitko"
-					aria-label="menu"
-				>
+				<button class="navbar-toggler" type="button" id="menu-tlacitko" aria-label="menu">
 					<i class="fas fa-bars"></i>
 				</button>
 				<div class="collapse navbar-collapse" id="menu-polozky">
@@ -56,11 +49,8 @@
 						<h1 class="mb-3">FilmBox</h1>
 						<h5 class="mb-4">Všechny vaše oblíbené filmy na jednom místě</h5>
 						<a class="btn btn-light btn-lg shadow-4 m-2" href="seznam.html"
-							>Seznam filmů</a
-						>
-						<a class="btn btn-light btn-lg shadow-4 m-2" href="o-webu.html"
-							>O webu</a
-						>
+							>Seznam filmů</a>
+						<a class="btn btn-light btn-lg shadow-4 m-2" href="o-webu.html">O webu</a>
 					</div>
 				</div>
 			</div>
