Postupné řešení projektu 8.12.2024

--- a/film.html
+++ b/film.html
@@ -19,6 +19,9 @@
 		/>
 		<script src="mdb5-standard-UI-kit-free-6.0.1/js/mdb.min.js" defer></script>
 		<link rel="stylesheet" href="styly.css" />
+
+		<script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
+
 	</head>
 	<body>
 		<!-- Navigace -->
@@ -51,7 +54,7 @@
 		<!-- Detail -->
 		<div class="container-lg mt-5">
 			<div class="card mb-3" id="detail-filmu">
-				<div class="row g-0">
+				<!--<div class="row g-0">
 					<div class="col-md-5">
 						<img
 							src="https://via.placeholder.com/663x909?text=Plak%C3%A1t"
@@ -145,7 +148,7 @@
 							</form>
 						</div>
 					</div>
-				</div>
+				</div>-->
 			</div>
 		</div>
 
