--- a/seznam.html
+++ b/seznam.html
@@ -19,6 +19,7 @@
 		/>
 		<script src="mdb5-standard-UI-kit-free-6.0.1/js/mdb.min.js" defer></script>
 		<link rel="stylesheet" href="styly.css" />
+
 	</head>
 	<body>
 		<!-- Navigace -->
@@ -51,7 +52,7 @@
 		<!-- Seznam filmů -->
 		<div class="container-lg mt-5">
 			<div class="row row-cols-1 row-cols-md-3 g-4" id="seznam-filmu">
-				<div class="col">
+				<!--<div class="col">
 					<div class="card">
 						<img
 							src="https://via.placeholder.com/780x520?text=Plak%C3%A1t"
@@ -82,7 +83,7 @@
 							<a href="film.html" class="btn btn-primary">Přehrát</a>
 						</div>
 					</div>
-				</div>
+				</div>-->
 			</div>
 		</div>
 
