--- a/film.html
+++ b/film.html
@@ -156,7 +156,6 @@
 		<div class="container-lg mt-5">
 			<div id="prehravac" class="player rounded shadow-4">
 				<video
-					controls
 					loop
 					preload="auto"
 					poster="https://user-images.githubusercontent.com/1045362/204167262-a16c4755-3d23-400e-b6b0-c9c242399ecf.jpg"
@@ -165,8 +164,7 @@
 				>
 					<source
 						src="https://user-images.githubusercontent.com/1045362/204137892-c6aee4cd-8cc1-44db-b076-71774d67c7b3.mp4"
-						type="video/mp4"
-					/>
+						type="video/mp4"/>
 				</video>
 				<div class="player-controls">
 					<button type="button" class="play fas fa-play">Přehrát</button>
